load templates if they exist

--- a/app/elements/coder/code-editor/code-editor-with-actions.html
+++ b/app/elements/coder/code-editor/code-editor-with-actions.html
@@ -224,7 +224,7 @@
 				}).pop(0).tag);
 			},
 			handleTemplateFetched: function(e, detail) {
-				this.$$('#codeEditor').handleAdd(e, detail);
+				this.$$('#codeEditor').addFile(detail.path, detail.content);
 			}
 		});
 	</script>
