edit challenge and some refactors  * refactor: invite candidates by challenge canonical name instead of id  * refactor: redo challenge detail page  * edit challenge: edit basic info and locations

--- a/app/elements/common/data-providers/challenge/challenge-by-canonical-name-provider.html
+++ b/app/elements/common/data-providers/challenge/challenge-by-canonical-name-provider.html
@@ -18,6 +18,13 @@
 	<script>
 		Polymer({
 			is: 'challenge-by-canonical-name-provider',
+			properties: {
+				manual: {
+					type: Boolean,
+					notify: true,
+					value: false
+				}
+			},
 			behaviors: [
 				Behaviors.Providers.General
 			],
@@ -25,6 +32,9 @@
 				'_urlChanged(baseUrl, canonicalName)'
 			],
 			_urlChanged: function(){
+				if (this.manual){
+					return;
+				}
 				this.refresh();
 			},
 			refresh: function(){
