--- a/app/elements/company/challenge/invited-users-table.html
+++ b/app/elements/company/challenge/invited-users-table.html
@@ -1,5 +1,8 @@
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/paper-datatable/paper-datatable.html">
+<link rel="import" href="../../../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 
 <dom-module id="invited-users-table">
 	<style include="iron-flex">
@@ -7,38 +10,60 @@
 			display: block;
 			height: 100%;
 		}
+		paper-material {
+			margin: 16px;
+		}
 		paper-icon-button {
 			@apply(--layout-self-center);
+		}
+		.title-wrapper {
+			@apply(--layout-horizontal);
 		}
 	</style>
 	<template>
 		<invitations-by-challenge-canonical-name-provider canonical-name="[[challenge]]" data="{{invitations}}"></invitations-by-challenge-canonical-name-provider>
+		<invite-candidates id="inviteCandidates" challenge="{{challenge}}" on-invitation-sent="refresh"></invite-candidates>
 
-		<paper-datatable data="[[invitations]]" class="fullHeight" on-cell-tap="_onClick">
-			<paper-datatable-column header="Username" property="username"></paper-datatable-column>
-			<paper-datatable-column header="Email" property="email"></paper-datatable-column>
-			<paper-datatable-column header="Token" property="token"></paper-datatable-column>
-			<paper-datatable-column header="Started" property="started">
-				<template>
-					<span>{{_formatDate(value)}}</span>
-				</template>
-			</paper-datatable-column>
-			<paper-datatable-column header="Expire" property="expire">
-				<template>
-					<span>{{_formatDate(value)}}</span>
-				</template>
-			</paper-datatable-column>
-		</paper-datatable>
-
+		<paper-material class="card">
+			<div class="title-wrapper">
+				<h3>Invited users</h3>
+				<div class="flex"></div>
+				<paper-icon-button icon="mail" on-click="_inviteCandidates"></paper-icon-button>
+			</div>
+			<paper-datatable data="[[invitations]]" class="fullHeight" on-cell-tap="_onClick">
+				<paper-datatable-column header="Username" property="username"></paper-datatable-column>
+				<paper-datatable-column header="Email" property="email"></paper-datatable-column>
+				<paper-datatable-column header="Token" property="token"></paper-datatable-column>
+				<paper-datatable-column header="Started" property="started">
+					<template>
+						<span>{{_formatDate(value)}}</span>
+					</template>
+				</paper-datatable-column>
+				<paper-datatable-column header="Expire" property="expire">
+					<template>
+						<span>{{_formatDate(value)}}</span>
+					</template>
+				</paper-datatable-column>
+			</paper-datatable>
+		</paper-material>
 	</template>
 	<script>
 		Polymer({
 			is: 'invited-users-table',
+			_formatValue: function(data) {
+				return data;
+			},
 			_onClick: function(e, d){
 				page('/u/' + d.item.username);
 			},
 			_formatDate: function(d){
 				return util.formatDate(d);
+			},
+			refresh: function() {
+				this.$$('invitations-by-challenge-canonical-name-provider').refresh();
+			},
+			_inviteCandidates: function(){
+				this.$.inviteCandidates.toggle();
 			}
 		});
 	</script>
