--- a/app/elements/company/challenge/challenge-edit-locations.html
+++ b/app/elements/company/challenge/challenge-edit-locations.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
-<dom-module id="challenge-create-locations">
+<dom-module id="challenge-edit-locations">
 	<template>
 		<style include="iron-flex">
 			paper-button {
@@ -14,24 +14,43 @@
 				@apply(--layout-center);
 			}
 		</style>
-		<div class="desc">
-			<div>If the challenge will have an on-site location search it on the map and confirm your selections</div>
-			<div class="flex"></div>
-			<div id="confirmLocationButton">
-				<paper-icon-button icon="check" on-click="_confirmLocation"></paper-icon-button>
-				<paper-icon-button icon="close" on-click="_toggleMap"></paper-icon-button>
-			</div>
-			<paper-icon-button id="addLocationButton" icon="add" on-click="_toggleMap"></paper-icon-button>
+
+		<coduno-iron-ajax
+			id="updateChallengeLocations"
+			method="PUT"
+			body="{{locations}}"
+			path="challenges/[[canonicalName]]/locations"
+			on-request-finished="_onResponse"
+			error="{{error}}">
+		</coduno-iron-ajax>
+		<locations-by-challenge-canonical-name-provider canonical-name="[[canonicalName]]" data="{{locations}}" auto="true"></locations-by-challenge-canonical-name-provider>
+
+		<div class="mainContent">
+			<paper-material class="card" elevation="1">
+				<errors-display error="[[error]]"></errors-display>
+				<div class="desc">
+					<div>If <strong>[[canonicalName]]</strong> will have an on-site location search it on the map and confirm your selections</div>
+					<div class="flex"></div>
+					<div id="confirmLocationButton">
+						<paper-icon-button icon="check" on-click="_confirmLocation"></paper-icon-button>
+						<paper-icon-button icon="close" on-click="_toggleMap"></paper-icon-button>
+					</div>
+					<paper-icon-button id="addLocationButton" icon="add" on-click="_toggleMap"></paper-icon-button>
+				</div>
+				<template is="dom-repeat" items="[[locations]]">
+					<short-removable-location location="[[item]]" on-remove-location="_removeLocation"></short-removable-location>
+				</template>
+				<google-location-finder id="locationFinder" selected-place="{{location}}"></google-location-finder>
+
+				<paper-button raised on-click="_saveLocations">Save</paper-button>
+			</paper-material>
 		</div>
-		<template is="dom-repeat" items="[[locations]]">
-			<short-removable-location location="[[item]]" on-remove-location="_removeLocation"></short-removable-location>
-		</template>
-		<google-location-finder id="locationFinder" selected-place="{{location}}"></google-location-finder>
+
 		<paper-toast id="toast" text="You need to select a location"></paper-toast>
 	</template>
 	<script>
 		Polymer({
-			is: 'challenge-create-locations',
+			is: 'challenge-edit-locations',
 			properties: {
 				locations: {
 					type: Array,
@@ -80,6 +99,12 @@
 			_switchButtons: function(){
 				this.$.confirmLocationButton.style.display = this.$.confirmLocationButton.style.display === 'none' ? '' : 'none';
 				this.$.addLocationButton.style.display = this.$.addLocationButton.style.display === 'none' ? '' : 'none';
+			},
+			_saveLocations: function() {
+				this.$.updateChallengeLocations.generateRequest();
+			},
+			_onResponse: function() {
+				page('/challenges/' + this.canonicalName);
 			}
 		});
 	</script>
