--- a/app/elements/common/services/template-service.html
+++ b/app/elements/common/services/template-service.html
@@ -26,6 +26,7 @@
 				Behaviors.ServiceBehavior
 			],
 			getTemplates: function(taskId, language) {
+				this.language = language;
 				this.$.getList.url = util.build('/tasks/' + taskId + '/templates/' + language);
 				this.$.getList.generateRequest();
 			},
@@ -55,10 +56,11 @@
 					console.log('Got malformed Content-Disposition "' + contentDisposition + '"');
 					return;
 				}
-				var pathStart = e.detail.url.indexOf('/root');
+				var pathStart = e.detail.url.indexOf('/' + this.language);
 				if (pathStart === -1) {
 					return;
 				}
+				pathStart += this.language.length + 1;
 				var completePath = e.detail.url.substring(
 					pathStart,
 					e.detail.url.indexOf(match[1]) + match[1].length
