pwd reset pages stytling

--- a/app/elements/user/password-reset/password-forgot-page.html
+++ b/app/elements/user/password-reset/password-forgot-page.html
@@ -14,32 +14,31 @@
         .fieldList {
             @apply(--layout-vertical);
         }
+        paper-button {
+            margin-top: 20px;
+        }
     </style>
     <template>
-        <paper-material id="wrapper" elevation="1" class="card">
-            <div class="mainContent">
-                <coduno-iron-ajax
-                        id="forgotPasswordRequest"
-                        method="POST"
-                        path="/user/password/reset"
-                        body="{{email}}"
-                        on-request-finished="_onResponse"
-                        error="{{error}}">
-                </coduno-iron-ajax>
-                <h4>Request a new password</h4>
-                <div class="fieldList">
-                    <errors-display error="{{error}}"></errors-display>
-                    <form is="iron-form" id="form">
-                        <paper-input type="email" label="Email" value="{{email.email}}"
-                                     required auto-validate error-message="Email not valid."></paper-input>
-                    </form>
-                </div>
-                <div class="buttons">
-                    <paper-button on-click="_sendRequest" class="primary">Request new password</paper-button>
-                </div>
-                <paper-toast id="toast" text="{{toastText}}"></paper-toast>
+        <coduno-iron-ajax
+                id="forgotPasswordRequest"
+                method="POST"
+                path="/user/password/reset"
+                body="{{email}}"
+                on-request-finished="_onResponse"
+                error="{{error}}">
+        </coduno-iron-ajax>
+        <base-wizard show-back-button="[[false]]">
+            <h4>Request a new password</h4>
+            <div class="fieldList">
+                <errors-display error="{{error}}"></errors-display>
+                <form is="iron-form" id="form">
+                    <paper-input type="email" label="Email" value="{{email.email}}"
+                                 required auto-validate error-message="Email not valid."></paper-input>
+                </form>
+                <paper-button raised on-click="_sendRequest" class="primary">Request new password</paper-button>
             </div>
-        </paper-material>
+        </base-wizard>
+        <paper-toast id="toast" text="{{toastText}}"></paper-toast>
     </template>
 </dom-module>
 
