--- a/app/elements/user/password-reset/password-reset-page.html
+++ b/app/elements/user/password-reset/password-reset-page.html
@@ -14,10 +14,11 @@
         .fieldList {
             @apply(--layout-vertical);
         }
+        .buttons {
+            margin-top: 20px;
+        }
     </style>
     <template>
-        <paper-material id="wrapper" elevation="1" class="card">
-            <div class="mainContent">
                 <coduno-iron-ajax
                         id="resetPasswordRequest"
                         method="PUT"
@@ -26,24 +27,24 @@
                         on-request-finished="_onResponse"
                         error="{{error}}">
                 </coduno-iron-ajax>
-                <match-password other-password="[[password.password]]" validator-name="match-password-validator"></match-password>
-                <h4>Reset your password</h4>
-                <div class="fieldList">
-                    <errors-display error="{{error}}"></errors-display>
-                    <form is="iron-form" id="form">
-                        <paper-input type="password" label="New" value="{{password.password}}"
-                                     required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars."></paper-input>
-                        <paper-input type="password" label="Re-type new" value="{{password.retypedPassword}}"
-                                     required auto-validate validator="match-password-validator" error-message="Must match the new password."></paper-input>
-                    </form>
-                </div>
-                <div class="buttons">
-                    <paper-button class="secondary" dialog-dismiss>Cancel</paper-button>
-                    <paper-button on-click="_savePassword" class="primary" disabled="{{saveDisabled}}">Save</paper-button>
-                </div>
-                <paper-toast id="toast" text="{{toastText}}"></paper-toast>
+        <base-wizard show-back-button="[[false]]">
+            <match-password other-password="[[password.password]]" validator-name="match-password-validator"></match-password>
+            <h4>Reset your password</h4>
+            <div class="fieldList">
+                <errors-display error="{{error}}"></errors-display>
+                <form is="iron-form" id="form">
+                    <paper-input type="password" label="New" value="{{password.password}}"
+                                 required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars."></paper-input>
+                    <paper-input type="password" label="Re-type new" value="{{password.retypedPassword}}"
+                                 required auto-validate validator="match-password-validator" error-message="Must match the new password."></paper-input>
+                </form>
             </div>
-        </paper-material>
+            <div class="buttons">
+                <paper-button class="secondary" dialog-dismiss>Cancel</paper-button>
+                <paper-button on-click="_savePassword" class="primary" disabled="{{saveDisabled}}">Save</paper-button>
+            </div>
+            <paper-toast id="toast" text="{{toastText}}"></paper-toast>
+        </base-wizard>
     </template>
 </dom-module>
 
