Nav: fix logout button

--- a/app/elements/app-nav.html
+++ b/app/elements/app-nav.html
@@ -37,7 +37,7 @@
 		<template is="dom-if" if="{{isLoggedIn}}">
 			<paper-material elevation="1">
 			<paper-toolbar class="higher">
-				<a href="https://cod.uno/" target="_blank"><iron-icon src="/images/logo.svg" class="big"></iron-icon></a>
+				<a href="https://app.cod.uno/" target="_blank"><iron-icon src="/images/logo.svg" class="big"></iron-icon></a>
 				<div class="flex">
 					<paper-tabs id="bottomTabs" class="bottom indent" selected="{{selected}}" noink no-slide>
 						<span></span>
@@ -68,7 +68,7 @@
 					<paper-icon-button icon="supervisor-account" class="dropdown-trigger"></paper-icon-button>
 					<paper-listbox class="dropdown-content">
 						<paper-item><a href="/user/settings" style="color: #444444; text-decoration: none;">Settings</a></paper-item>
-						<paper-item><a href="/logout" style="color: #444444; text-decoration: none;">Logout</a></paper-item>
+						<form form id="form-logout" method="POST" action="[[_build('/logout')]]"><paper-item><a href="" style="color: #444444; text-decoration: none;" onclick="document.getElementById('form-logout').submit()">Logout</a></paper-item></form>
 					</paper-listbox>
 				</paper-menu-button>
 				<paper-progress class="secnav bottom fit" indeterminate style$="{{progressStyle}}"></paper-progress>
@@ -121,6 +121,9 @@
 				lastOrganization: {
 					type: Object
 				}
+			},
+			_build: function(url) {
+				return util.build(url);
 			},
 			startLoading: function(){
 				if(this.pendingRequests === 0){
