Fix google maps (#310)

--- a/app/elements/common/location/google-location-finder.html
+++ b/app/elements/common/location/google-location-finder.html
@@ -32,7 +32,12 @@
 		</style>
 		<div id="container">
 			<input id="searchInput" class="controls" type="text" placeholder="Enter a location">
-			<google-map id="map" map="{{map}}" latitude="[[center.lat]]" longitude="[[center.lng]]">
+			<google-map id="map"
+						api-key="[[apiConfig.apiKey]]"
+						version="[[apiConfig.version]]"
+						map="{{map}}"
+						latitude="[[center.lat]]"
+						longitude="[[center.lng]]">
 				<google-map-marker id="placeMarker"
 								   map="[[map]]"
 								   marker="{{marker}}"
@@ -48,6 +53,21 @@
 		Polymer({
 			is: 'google-location-finder',
 			properties: {
+				apiConfig: {
+					type : Object,
+					notify: true,
+					value: function() {
+						// This api key for the maps api will only work on our production and staging enviornment
+						// so using it locally(or any other place for that matter) will only result in errors.
+						// No api key is needed for local development.
+						if (location.origin.indexOf('localhost') === -1) {
+							return {
+								apiKey: 'AIzaSyCnqlcAd2M-qW20SDsghrBOOLvs144c3og',
+								version: '3.24'
+							};
+						}
+					}
+				},
 				center: {
 					type: Object,
 					notify: true,
