extract maps api config in behavior

--- a/app/elements/common/location/google-location-finder.html
+++ b/app/elements/common/location/google-location-finder.html
@@ -49,25 +49,14 @@
 			</google-map>
 		</div>
 	</template>
+	<script type="application/javascript" src="../../../scripts/behaviors/google-maps-host-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'google-location-finder',
+			behaviors: [
+				Behaviors.GoogleMapsHostBehavior
+			],
 			properties: {
-				apiConfig: {
-					type : Object,
-					notify: true,
-					value: function() {
-						// This api key for the maps api will only work on our production and staging enviornment
-						// so using it locally(or any other place for that matter) will only result in errors.
-						// No api key is needed for local development.
-						if (location.origin.indexOf('localhost') === -1) {
-							return {
-								apiKey: 'AIzaSyCnqlcAd2M-qW20SDsghrBOOLvs144c3og',
-								version: '3.24'
-							};
-						}
-					}
-				},
 				center: {
 					type: Object,
 					notify: true,
